--- a/Assets/style.css
+++ b/Assets/style.css
@@ -50,4 +50,66 @@ header h3 {
     
 }
 
+main {
+    margin: 100px 0 100px 0;
+    
+}
 
+.titles {
+    margin-right: 20px;
+    padding-left: 20px;
+    clear: both;
+    float: left;
+    width: 140px;
+    height: 100%;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #2589bd;
+}
+
+
+
+#about_me_text {
+    text-align: right;
+    margin-right: 10px;
+}
+
+#about_me_hr{ 
+    position: relative;
+    float: right;
+    margin-top: -55px;
+    border: none;
+    border-left:2px solid red;
+    height: 100px;
+    width: 1px;
+}
+
+#work_text {
+    margin: 75px 10px 0 0;
+    text-align: right;
+}
+
+#work_hr { 
+    position: relative;
+    float: right;
+    margin-top: -55px;
+    border: none;
+    border-left: 2px solid red;
+    height: 100px;
+    width: 1px;
+}
+
+#contact_me_text {
+    margin: 75px 10px 0 0;
+    text-align: right;
+    
+}
+
+#contact_me_hr { 
+    position: relative;
+    float: right;
+    margin-top: -55px;
+    border: none;
+    border-left: 2px solid red;
+    height: 100px;
+    width: 1px;
+}
