--- a/Assets/style.css
+++ b/Assets/style.css
@@ -44,8 +44,13 @@ header h3 {
 }
 
 main {
-    margin: 100px 0 100px 0;
-    
+    text-align: center;
+}
+
+main img {
+    height: 100px;
+    width: 100px;
+    border-radius: 100%;
 }
 
 .titles {
