--- a/Assets/style.css
+++ b/Assets/style.css
@@ -6,23 +6,20 @@
 
 header {
     background-color: gray;
-    margin: 0 0 25px 0;
-    padding: 15px 0 15px 0;
-    
-    
+    padding: 3% 0 3% 0;  
 }
 
 header h1 {
-    padding-left: 100px;
+    padding-left: 5%;
     display: inline-block;
-    font-size: 48px;
+    font-size: 175%;
     background-color: skyblue;
     color: gray;
+    
 }
 
 header nav {
-    padding-top: 15px;
-    margin-right: 20px;
+    padding: 15px 10px 5px 10;
     float: right;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
@@ -30,21 +27,18 @@ header nav {
 }
 
 header nav li {
-    display: inline-block;
-    margin-left: 25px;
+    display: inline-block;  
 }
 
 header h3 {
     color: skyblue;
-    padding: 2px;
     text-decoration: underline gray;
     border-bottom: 2px solid skyblue;
-    
-    
 }
 
 main {
     text-align: center;
+    margin: 100px 0 100px 0;
 }
 
 main img {
@@ -81,28 +75,12 @@ main img {
     width: 1px;
 }
 
-#work_text {
+.work_and_contact_me_text {
     margin: 75px 10px 0 0;
     text-align: right;
 }
 
-#work_hr { 
-    position: relative;
-    float: right;
-    margin-top: -55px;
-    border: none;
-    border-left: 2px solid red;
-    height: 100px;
-    width: 1px;
-}
-
-#contact_me_text {
-    margin: 75px 10px 0 0;
-    text-align: right;
-    
-}
-
-#contact_me_hr { 
+.work_and_contact_me_hr { 
     position: relative;
     float: right;
     margin-top: -55px;
@@ -124,6 +102,21 @@ section li {
 }
 
 footer {
-    margin: 20px 0 10px 0;
     text-align: center;
+}
+
+@media screen and (max-width: 907px) {
+    header{
+        text-align:center;
+    }
+}
+@media screen and (max-width: 907px) {
+    nav{
+        text-align:center;
+        float: inline-end;
+        /* flex-wrap: wrap; */
+        /* width: 10px; */
+        /* height: 25px; */
+        margin-left: -10px;
+    }
 }
