--- a/Assets/style.css
+++ b/Assets/style.css
@@ -4,47 +4,48 @@
     margin: 0;
 }
 
+
+
 header {
-    background-color: gray;
-    padding: 3% 0 3% 0;  
+    display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1%;
+  background-color: #13293d;
+  color: #fff;
 }
 
 header h1 {
-    padding-left: 5%;
-    display: inline-block;
-    font-size: 175%;
-    background-color: skyblue;
-    color: gray;
-    
+
+    font-size: 200%;
 }
 
-header nav {
-    padding: 15px 10px 5px 10;
-    float: right;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 20px;
-    background-color: gray;
+nav a {
+    color: #b9c6ae;
+  font-weight: bold;
+  text-decoration: none;
 }
 
-header nav li {
-    display: inline-block;  
-}
+nav a:hover {
+    color: #fff;
+  }
 
-header h3 {
-    color: skyblue;
-    text-decoration: underline gray;
-    border-bottom: 2px solid skyblue;
+header ul {
+    display: flex;
+  justify-content: space-between;
+  min-width: 300px;
+  list-style: none;
 }
 
 main {
     text-align: center;
-    margin: 100px 0 100px 0;
 }
 
 main img {
     height: 100px;
     width: 100px;
     border-radius: 100%;
+    margin: 2% 0 2% 0;
 }
 
 .titles {
@@ -101,22 +102,20 @@ section li {
     text-align: center;
 }
 
+p {
+    line-height: 125%;
+}
+
 footer {
     text-align: center;
 }
 
-@media screen and (max-width: 907px) {
-    header{
-        text-align:center;
+@media screen and (max-width: 768px) {
+    header {
+      flex-direction: column;
     }
-}
-@media screen and (max-width: 907px) {
-    nav{
-        text-align:center;
-        float: inline-end;
-        /* flex-wrap: wrap; */
-        /* width: 10px; */
-        /* height: 25px; */
-        margin-left: -10px;
+  
+    main {
+      max-width: 1200px;
     }
-}
+  }
