--- a/Assets/style.css
+++ b/Assets/style.css
@@ -2,6 +2,7 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 
@@ -16,7 +17,6 @@ header {
 }
 
 header h1 {
-
     font-size: 200%;
 }
 
@@ -55,7 +55,6 @@ main img {
     float: left;
     width: 140px;
     height: 100%;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
 }
 
@@ -92,22 +91,45 @@ main img {
 }
 
 section ul {
-    margin: 300px 0 50px 0;
+    margin-top: 350px;
     text-align: center;
 }
 
 section li {
     display: inline-block;
-    margin-left: 8px;
+    margin-left: 10px;
     text-align: center;
 }
 
+.buttons {
+    background-color: #13293d;
+    color: white;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 20px;
+  }
+
+.buttons {
+    border: 1px solid;
+    padding: 10px;
+    box-shadow: 2px 3px #888888;
+    border-radius: 8%;
+}
+
+.buttons:hover{
+    transform: scale(1.1);
+    transition: .5s;
+ }
+ 
 p {
     line-height: 125%;
+    margin-right: 5px;
 }
 
 footer {
     text-align: center;
+    margin: 20px 0 20px 0;
 }
 
 @media screen and (max-width: 768px) {
