--- a/Assets/style.css
+++ b/Assets/style.css
@@ -5,6 +5,14 @@
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
+table {
+    border: thick double #32a1ce;
+    margin: 0 auto 0 auto;
+    /* padding: 15px; */
+    }
+
+
+
 
 
 header {
@@ -24,6 +32,15 @@ nav a {
     color: #b9c6ae;
   font-weight: bold;
   text-decoration: none;
+}
+
+
+aside {
+    /* padding-bottom: 357px; */
+    /* margin-bottom: 0; */
+    margin: 0 auto 0 auto;
+   
+
 }
 
 nav a:hover {
@@ -48,6 +65,10 @@ main img {
     margin: 2% 0 2% 0;
 }
 
+main h2 {
+padding-left: 150px;
+}
+
 .titles {
     margin-right: 20px;
     padding-left: 20px;
@@ -55,14 +76,28 @@ main img {
     float: left;
     width: 140px;
     height: 100%;
-    background-color: #2589bd;
 }
 
+#refactor {
+    margin-top: 50px;
+    
+}
 
+#refactor:hover {
+    transform: scale(1.1);
+    transition: .5s;
+    border: solid 1px black;
+}
+
+table img:hover {
+    transform: scale(1.1);
+    transition: .5s;
+    border: solid 1px black;
+}
 
 #about_me_text {
-    text-align: right;
-    margin-right: 10px;
+   float: left;
+    
 }
 
 #about_me_hr{ 
@@ -71,27 +106,50 @@ main img {
     margin-top: -55px;
     border: none;
     border-left:2px solid red;
-    height: 100px;
+    height: 155px;
     width: 1px;
 }
 
-.work_and_contact_me_text {
-    margin: 75px 10px 0 0;
-    text-align: right;
+#work_text {
+    margin: 150px -10px 0 0;
+    float: left;
+    
 }
 
-.work_and_contact_me_hr { 
+
+
+#work_hr { 
+    position: relative;
+    float: right;
+    border: none;
+    border-left: 2px solid red;
+    margin-top: 155px;
+    height: 537px;
+    width: 1px;
+    
+}
+
+#contact_me_text {
+    margin: 95px 0 0 10px;
+    float: left;
+}
+
+#contact_me_hr { 
     position: relative;
     float: right;
     margin-top: -55px;
     border: none;
     border-left: 2px solid red;
-    height: 100px;
+    height: 52px;
     width: 1px;
 }
 
+section {
+    text-align: center;
+}
+
 section ul {
-    margin-top: 350px;
+    margin-top: 100px;
     text-align: center;
 }
 
@@ -108,31 +166,40 @@ section li {
     text-decoration: none;
     display: inline-block;
     font-size: 20px;
-  }
-
-.buttons {
     border: 1px solid;
     padding: 10px;
     box-shadow: 2px 3px #888888;
     border-radius: 8%;
-}
+  }
+
+
 
 .buttons:hover{
     transform: scale(1.1);
     transition: .5s;
  }
- 
+
 p {
+    margin: 0 auto 0 auto;
+    padding-left: 150px;
+    text-align: center;
     line-height: 125%;
-    margin-right: 5px;
+    /* margin-right: 5px; */
+    width: 775px;
 }
 
 footer {
     text-align: center;
-    margin: 20px 0 20px 0;
+    margin: 20px 0 0 0;
+    padding: 20px 0 20px 0;
+    background-color: #13293d;
+    color: white;
 }
 
 @media screen and (max-width: 768px) {
+    *{
+        
+    }
     header {
       flex-direction: column;
     }
@@ -141,3 +208,9 @@ footer {
       max-width: 1200px;
     }
   }
+
+@media screen and (min-width: 775px) {
+    * {
+        /* min-width: 792px; */
+    }
+}
