--- a/Assets/style.css
+++ b/Assets/style.css
@@ -16,12 +16,13 @@ table {
 
 
 header {
-    display: flex;
+  display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 1%;
   background-color: #13293d;
   color: #fff;
+  padding-left: 150px;
 }
 
 header h1 {
@@ -189,28 +190,123 @@ p {
 }
 
 footer {
-    text-align: center;
+    
+    
     margin: 20px 0 0 0;
-    padding: 20px 0 20px 0;
+    padding: 20px 0 20px 150px;
     background-color: #13293d;
     color: white;
 }
 
+
 @media screen and (max-width: 768px) {
-    *{
+
+    main img {
+        margin-left: 135px;
+    }    
+    .section_1 {
+        display: flex;
+        flex-wrap: wrap;    
+    }  
+
+p {
+    padding-left: 0px;
+}
+
+
+
+#about_me_hr {
+        padding: 0 0 160px 0;
         
     }
-    header {
+#work_text {
+        margin-top: 225px;   
+        
+    }
+
+#work_hr {
+    /* margin-top: 225px; */
+    margin: 220px 0 0px 0;
+    height: 405px;
+    
+}
+
+#contact_me_hr {
+    margin: -50px 0 0px 0;
+}
+
+#refactor {
+    max-width: 50%;
+    height: auto;
+    margin-top: 120px;
+      }
+
+table {
+    max-width: 50%;
+  height: auto;
+}
+
+table img {
+    max-width: 100%;
+  height: auto;
+}
+
+
+header {
       flex-direction: column;
     }
-  
-    main {
-      max-width: 1200px;
-    }
-  }
+}
+@media screen and (max-width: 578px) {
 
-@media screen and (min-width: 775px) {
-    * {
-        /* min-width: 792px; */
+    main img {
+        margin-right: 180px;
+    }  
+
+#about_me_hr {
+        padding: 0 0 240px 0;
     }
+    
+#work_text {
+        margin-top: 350px;   
+    }
+
+#work_hr {
+    margin-top: 335px;
+    height: 310px;
+}
+
+#refactor {
+    margin-top: 150px;
+}
+
+
+}
+  
+@media screen and (max-width: 500px) {
+    main img {
+        margin-right: 275px;
+    }  
+
+#about_me_hr {
+    padding: 300px 0 0 0;
+    }
+#work_text {
+        margin-top: 300px;  
+         
+    }
+
+#work_hr {
+    margin: 300px 0 0px 0;
+    height: 275px;
+}
+
+#refactor {
+    margin-top: 60px;
+}
+
+#contact_me_hr {
+    margin: 0px 0 px 0;
+    height: 103px;
+}
+
 }
